src/css/benefits.css
.benefits {
  padding: 40px 0;

  @media screen and (min-width: 1440px) {
    padding: 112px 0;
  }
}
.benefits-wrapper {
  display: flex;
  flex-direction: column;
  gap: 32px;

  @media screen and (min-width: 1440px) {
    flex-direction: row-reverse;
    gap: 80px;
  }
}
.benefits-content {
  @media screen and (min-width: 1440px) {
    padding: 54px 0;
  }
}
.benefits .section-title {
  margin-bottom: 32px;

  font-size: 40px;
  line-height: 1.2;
  text-align: start;

  @media screen and (min-width: 768px) {
    max-width: 450px;
  }
}
.benefits-list {
  display: flex;
  flex-direction: column;
  gap: 32px;
  padding: 8px 0;
}
.benefits-item {
  display: flex;
  gap: 24px;
}
.benefits-icon {
  width: 48px;
  height: 48px;
}

.benefits-subscribe-wrapper {
  max-width: 263px;

  @media screen and (min-width: 768px) {
    max-width: 540px;
  }
}
.benefits-subtitle {
  margin-bottom: 16px;

  font-weight: 700;
  font-size: 24px;
  line-height: 1.1;
}
.benefits-hippo-img {
  border-radius: 16px;
  display: block;
  width: 100%;
  height: auto;

  @media screen and (min-width: 768px) {
    max-width: 522px;
    margin: 0 auto;
  }
  @media screen and (min-width: 1440px) {
    margin: 0;
    max-width: 616px;
  }
}

